# ml_profile

./: .gitignore  README.md  pyproject.toml
examples/: cpu_only_example.py  mpu.py  pytorch_example.py
ml_profiler/: __init__.py  __main__.py
ml_profiler/collectors/: __init__.py  cpu_psutil.py  gpu_nvml.py  mps_torch.py  pytorch_profiler.py
ml_profiler/exporters/: __init__.py  json_exporter.py  prometheus_exporter.py  tensorboard_exporter.py
ml_profiler/instrumentation/: __init__.py  profiler_manager.py
ml_profiler/utils/: logger.py
